--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -159,7 +159,7 @@ a {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  color: #white;
+  color: white;
   padding: 1rem 3rem;
 }
 
