--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -2,87 +2,19 @@
   License: none (public domain)
 */
 
-html,
-body,
-div,
-span,
-applet,
-object,
-iframe,
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote,
-pre,
-a,
-abbr,
-acronym,
-address,
-big,
-cite,
-code,
-del,
-dfn,
-em,
-img,
-ins,
-kbd,
-q,
-s,
-samp,
-small,
-strike,
-strong,
-sub,
-sup,
-tt,
-var,
-b,
-u,
-i,
-center,
-dl,
-dt,
-dd,
-ol,
-ul,
-li,
-fieldset,
-form,
-label,
-legend,
-table,
-caption,
-tbody,
-tfoot,
-thead,
-tr,
-th,
-td,
-article,
-aside,
-canvas,
-details,
-embed,
-figure,
-figcaption,
-footer,
-header,
-hgroup,
-menu,
-nav,
-output,
-ruby,
-section,
-summary,
-time,
-mark,
-audio,
-video {
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
@@ -91,138 +23,88 @@ video {
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
-article,
-aside,
-details,
-figcaption,
-figure,
-footer,
-header,
-hgroup,
-menu,
-nav,
-section {
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
   display: block;
 }
 body {
   line-height: 1;
 }
-ol,
-ul {
+ol, ul {
   list-style: none;
 }
-blockquote,
-q {
+blockquote, q {
   quotes: none;
 }
-blockquote:before,
-blockquote:after,
-q:before,
-q:after {
-  content: "";
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
   content: none;
 }
 table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+* {
+  box-sizing: border-box;
+}
 /* CSS RESET ENDS */
 /* General Content */
 body {
-  background-color: #303133;
+    background-color: #303133;
 }
-
-/*
-==========================================================
-starting second-page style
-==========================================================
-*/
-
-/* general */
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-.header,
-.main {
-  font-family: "Lato", "Helvetica Neue", "Helvetica", Arial;
-  color: white;
-  font-weight: 300;
-}
-
-/* header */
-.header {
-  background-color: #222222;
-  z-index: 10;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  color: white;
-  padding: 1rem 3rem;
-}
-
-#logo-img {
-  height: 4rem;
-}
-
-/* main */
-.wrapper {
-  width: 70%;
-  margin: 4rem auto;
-}
-.heading {
-  font-size: 5rem;
-  font-weight: 400;
-  margin-bottom: 2rem;
-}
-.heading .yellow {
-  color: #ecb613;
-  font-weight: 500;
-}
-
-.table {
-  width: 100%;
-}
-.table th {
-  background-color: rgba(126, 126, 126, 0.24);
-  padding: 0.5rem 1rem;
-  color: white;
-  font-size: .9rem;
-  font-weight: 300;
-  border-left: 0.125rem solid #303133;
-}
-.table tr {
-  height: 1.25rem;
-}
-
-/* 
-========================================================
-login page
-========================================================
-*/
 .toblock {
   display: block;
 }
+.toinlineblock {
+  display: inline-block;
+}
 .container {
-  margin: 0 auto;
+  margin: 30px auto;
   text-align: center;
-  width: 400px;
+  width: 320px;
   background-color: #262729;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+.margin-property {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+.padding-property {
+  padding-bottom: 40px;
 }
 .login-btn {
-  color: #bb432c;
-  background-color: rgba(0, 0, 0, 0.2);
-  width: 8rem;
-  height: 2rem;
+  color: #BB432C;
+  background-color: rgba(0,0,0,0.2);
   width: 90%;
+  height: 2rem;
+  border: 0px;
+  border-radius: 5px;
+  transition: 0.2s;
+  cursor: pointer;
+}
+.login-btn:hover {
+  background-color: #0B0C0C;
 }
 /* Logo Section */
 .header-two {
   font-size: 2.7rem;
   color: white;
+  padding-bottom: 70px;
 }
+.main-logo-image {
+  padding-top: 40px;
+}
+.main-logo-section a {
+  text-decoration: none;
+}
+/* Github button */
+.towhite {
+  color: white;
+  padding: 1rem 0;
+}
+/* Form */
 .input-row {
   background: #303133;
   width: 90%;
@@ -251,4 +133,13 @@ login page
   outline: none;
  
 }
-/* Github button */
+/* Forget Section */
+.grey-text {
+  text-decoration: none;
+  color: grey;
+  transition: 0.2s;
+  cursor: pointer;
+}
+.grey-text:hover {
+  color: lightblue;
+}
