--- a/Hackathon/views/login.ejs
+++ b/Hackathon/views/login.ejs
@@ -12,7 +12,7 @@
     <!-- Parent Container -->
     <div class="container">
       <section class="main-logo-section">
-        <img class="main-logo-image" src="assets/media/images/main-logo.png">
+        <img class="main-logo-image" src="/images/main-logo.png">
         <h2 class="header-two">codewars</h2>
       </section>
       <section>
