Added Login & Registration

--- a/Hackathon/views/login.ejs
+++ b/Hackathon/views/login.ejs
@@ -25,7 +25,7 @@
       <div>
         <p>-or-</p>
       </div>
-      <form action="post">
+      <form action="/" method="POST">
         <div class="input-row">
           <i class="fas fa-envelope"></i> 
           <input type="email" name="email" placeholder="email">
