--- a/Hackathon/views/untitled.html
+++ b/Hackathon/views/untitled.html
@@ -6,15 +6,18 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   </head>
   <body>
+  	<% include partials/header.ejs %>
   	<div class="main">
   		<div class="register">
 		    <div class="page-head">
 		      <h1>User Registration</h1>
 		    </div>
+		    <% if(messages.info) { %>
+					<p><%= info %></p>
+		    <% } %>
 		    <form class="sign-up" action= '/' method='POST'>
 			    <div class="login-type-user">
 	    	    <input type="text" name="email" placeholder="email">
-	    	    <input type="text" name="username" placeholder="username">
 	    	    <input type="password" name="password" placeholder="password">
 	          <div class="submit">
 	    	     <button type="submit" name="Submit">Sign In as User</button>
@@ -23,7 +26,17 @@
 			  </form>
   		</div>
   		<div class="login">
-  			<div>	
+  			<div>
+	  			<div class="login-type-oauth">
+	  			  <a href="/auth/twitter/">
+	  			    <button type="button" class="google-button">
+	  			      <span class="google-button__icon google-button__icon--plus">
+	  			        <i class="fab fa-twitter"></i>
+	  			      </span>
+	  			      <span class="google-button__text">Sign In using Twitter</span>
+	  			    </button>
+	  			  </a>
+	  			</div>		
 	  			<!-- SignIn using Github -->
   				<div class="login-type-oauth">
 	  			  <a href="/auth/github/">
