--- a/Hackathon/public/stylesheets/style.css
+++ b/Hackathon/public/stylesheets/style.css
@@ -1,304 +1,223 @@
-body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
-}
+/* http://meyerweb.com/eric/tools/css/reset/ 2. v2.0 | 20110126
+  License: none (public domain)
+*/
 
-a {
-  color: #00B7FF;
-}
-
-/* index */
-
-.main{
-	display: flex;
-	justify-content: space-around;
-	background: darkslateblue;
-}
-.sign-up{
-	margin: 3rem auto;
-	text-align: center;
-	max-width: 500px;
-	min-height: 100%;
-}
-input{
-	width: 420px;
-	height: 30px;
-	outline: 0;
-	border-radius: 6px;
-	padding: 10px;
-	margin: 10px;
-	display: block;
-	border: 2px solid green;
-	font-size: 1rem;
-}
-textarea{
-	width: 420px;
-	height: 80px;
-	border-radius: 6px;
-	padding: 10px;
-	margin: 10px;
-	display: block;
-	outline: 0;
-}
-.submit input{
-	width: 200px;
-	border: 0;
-	outline: 0;
-	height: 40px;
-	background: black;
-	font-size: 1rem;
-	margin-left: 130px;
-	color: #ffe;
-}
-.submit button {
-	width: 200px;
-	border: 0;
-	outline: 0;
-	height: 40px;
-	background: violet;
-	font-size: 1rem;
-	border-radius: 4px;
-	color: #ffe;
-	letter-spacing: 1px;
-	font-family: 'Inconsolata', monospace;
-}
-
-/* OAuth button*/
-.google-button {
-	letter-spacing: 1px;
-  height: 50px;
-  border-width: 0;
-  background: silver;
-  color: black;
-  border-radius: 5px;
-  white-space: nowrap;
-  box-shadow: 1px 1px 0px 1px rgba(0,0,0,0.05);
-  transition-property: background-color, box-shadow;
-  transition-duration: 150ms;
-  transition-timing-function: ease-in-out;
-  padding: 0;
-  outline: none;
-  cursor: pointer;
-  
-  &:focus,
-  &:hover {
-    box-shadow: 1px 4px 5px 1px rgba(0,0,0,0.1);
-  }
-  &:active {
-    background-color: #e5e5e5;
-    box-shadow: none;
-    transition-duration: 10ms;
-  }
-}
-    
-.google-button__icon {
-  display: inline-block;
-  vertical-align: middle;
-  margin: 8px 0 8px 8px;
-  width: 20px;
-  height: 20px;
-  box-sizing: border-box;
-}
-
-.google-button__icon--plus {
-  width: 26px;
-}
-
-.google-button__text {
-  display: inline-block;
-  /*vertical-align: middle;*/
-  padding: 0 24px;
-  font-size: 16px;
-  font-family: 'Inconsolata', monospace;;
-}
-.fa-github{
-	font-size: 20px;
-	margin-left: 1rem; 
-}
-.fa-twitter{
-	font-size: 20px;
-	color: #3391DB;
-}
-.error{
-	color: red;
-}
-
-/*Header*/
-
-.menu a{
-	text-decoration: none;
-	font-family: 'Inconsolata', monospace;
-	color: #fff;
-	margin: 0 20px;
-	padding: 10px 0;
-	font-size: 1.1rem;
-}
-.menu{
-	display: flex;
-	font-family: 'Inconsolata', monospace;
-	justify-content: space-between;
-	background: #100c08;
-	color: white;
-	padding: 10px;
-}
-
-/* Login Type */
-
-.login-type{
-	display: flex;
-	/*justify-content: space-between;*/
-}
-.login-type-user{
-	padding: 1rem;
-	border-right: 2px solid black;
-}
-.login-type-oauth{
-	margin: 4rem 1rem;
-	/*padding: 20px;*/
-}
-
-/* Contact Form */
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic);
-* {
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-font-smoothing: antialiased;
-  -moz-font-smoothing: antialiased;
-  -o-font-smoothing: antialiased;
-  font-smoothing: antialiased;
-  text-rendering: optimizeLegibility;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
 }
-
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block;
+}
 body {
-  font-family: "Roboto", Helvetica, Arial, sans-serif;
-  font-weight: 100;
-  font-size: 12px;
-  line-height: 30px;
-  color: #777;
-  background: #4CAF50;
+  line-height: 1;
+}
+ol, ul {
+  list-style: none;
+}
+blockquote, q {
+  quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none;
+}
+table {
+  border-collapse: collapse;
+  border-spacing: 0;
+}
+* {
+  box-sizing: border-box;
+}
+/* CSS RESET ENDS */
+/* General Content */
+body {
+  background-color: #303133;
 }
 
-.container {
-  max-width: 400px;
-  width: 100%;
-  margin: 0 auto;
-  position: relative;
+/*
+==========================================================
+starting second-page style
+==========================================================
+*/
+
+/* general */
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
-#contact input[type="text"],
-#contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="url"],
-#contact textarea,
-#contact button[type="submit"] {
-  font: 400 12px/16px "Roboto", Helvetica, Arial, sans-serif;
-}
-
-#contact {
-  background: #F9F9F9;
-  padding: 25px;
-  margin: 150px 0;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
-}
-
-#contact h3 {
-  display: block;
-  font-size: 30px;
+.header,
+.main {
+  font-family: "Lato", "Helvetica Neue", "Helvetica", Arial;
+  color: white;
   font-weight: 300;
-  margin-bottom: 10px;
 }
 
-#contact h4 {
-  margin: 5px 0 15px;
-  display: block;
-  font-size: 13px;
+/* header */
+.header {
+  background-color: #222222;
+  z-index: 10;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  padding: 1rem 3rem;
+}
+
+#logo-img {
+  height: 4rem;
+}
+
+/* main */
+.wrapper {
+  width: 70%;
+  margin: 4rem auto;
+}
+.heading {
+  font-size: 5rem;
   font-weight: 400;
+  margin-bottom: 2rem;
+}
+.heading .yellow {
+  color: #ecb613;
+  font-weight: 500;
 }
 
-fieldset {
-  border: medium none !important;
-  margin: 0 0 10px;
-  min-width: 100%;
-  padding: 0;
+.table {
   width: 100%;
+  text-align: left;
+}
+.table th {
+  background-color: rgba(126, 126, 126, 0.24);
+  padding: 0.5rem 1rem;
+  color: white;
+  font-size: 1rem;
+  font-weight: 400;
+  border-left: 0.125rem solid #303133;
+}
+.table tr:nth-child(even) {
+  background-color: rgba(128, 128, 128, 0.062);
+  border-left: 0.125rem solid #303133;
+}
+.table td {
+  padding: .5rem 1rem;
+  font-size: .9rem;
+  border-left: 0.125rem solid #303133;
 }
 
-#contact input[type="text"],
-#contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="url"],
-#contact textarea {
-  width: 100%;
-  border: 1px solid #ccc;
-  background: #FFF;
-  margin: 0 0 5px;
-  padding: 10px;
+@media only screen and (max-width: 500px) {
+  html {
+    font-size: 12px;
+  }
 }
-
-#contact input[type="text"]:hover,
-#contact input[type="email"]:hover,
-#contact input[type="tel"]:hover,
-#contact input[type="url"]:hover,
-#contact textarea:hover {
-  -webkit-transition: border-color 0.3s ease-in-out;
-  -moz-transition: border-color 0.3s ease-in-out;
-  transition: border-color 0.3s ease-in-out;
-  border: 1px solid #aaa;
+.toblock {
+  display: block;
 }
-
-#contact textarea {
-  height: 100px;
-  max-width: 100%;
-  resize: none;
+.toinlineblock {
+  display: inline-block;
 }
-
-#contact button[type="submit"] {
-  cursor: pointer;
-  width: 100%;
-  border: none;
-  background: #4CAF50;
-  color: #FFF;
-  margin: 0 0 5px;
-  padding: 10px;
-  font-size: 15px;
-}
-
-#contact button[type="submit"]:hover {
-  background: #43A047;
-  -webkit-transition: background 0.3s ease-in-out;
-  -moz-transition: background 0.3s ease-in-out;
-  transition: background-color 0.3s ease-in-out;
-}
-
-#contact button[type="submit"]:active {
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
-}
-
-.copyright {
+.container {
+  margin: 30px auto;
   text-align: center;
+  width: 320px;
+  background-color: #262729;
+  box-sizing: border-box;
+  border-radius: 5px;
 }
-
-#contact input:focus,
-#contact textarea:focus {
-  outline: 0;
-  border: 1px solid #aaa;
+.margin-property {
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
-
-::-webkit-input-placeholder {
-  color: #888;
+.padding-property {
+  padding-bottom: 40px;
 }
-
-:-moz-placeholder {
-  color: #888;
+.login-btn {
+  color: #BB432C;
+  background-color: rgba(0,0,0,0.2);
+  width: 90%;
+  height: 2rem;
+  border: 0px;
+  border-radius: 5px;
+  transition: 0.2s;
+  cursor: pointer;
 }
-
-::-moz-placeholder {
-  color: #888;
+.login-btn:hover {
+  background-color: #0B0C0C;
 }
-
-:-ms-input-placeholder {
-  color: #888;
+/* Logo Section */
+.header-two {
+  font-size: 2.7rem;
+  color: white;
+  padding-bottom: 70px;
+}
+.main-logo-image {
+  padding-top: 40px;
+}
+.main-logo-section a {
+  text-decoration: none;
+}
+/* Github button */
+.towhite {
+  color: white;
+  padding: 1rem 0;
+}
+/* Form */
+.input-row {
+  background: #303133;
+  width: 90%;
+  margin: 0 auto;
+  margin-bottom: 20px;
+  padding: 7px;
+  text-align: left;
+  border-radius: 4px;
+}
+.input-row:focus {
+  outline: #FFFFFF;
+}
+.input-row:hover {
+  background: #1e1f20;
+}
+.input-row i {
+  color: #FFFFFF;
+  font-size: 12px;
+}
+.input {
+  background: transparent;
+  border: none;
+  color: #FFFFFF;
+}
+.input:focus {
+  outline: none;
+ 
+}
+/* Forget Section */
+.grey-text {
+  text-decoration: none;
+  color: grey;
+  transition: 0.2s;
+  cursor: pointer;
+}
+.grey-text:hover {
+  color: lightblue;
 }
