--- a/Hackathon/views/dashboard.ejs
+++ b/Hackathon/views/dashboard.ejs
@@ -8,7 +8,7 @@
         <title>Second page</title>
 
         <!-- stylesheet -->
-        <link rel="stylesheet" href="./stylesheets/style.css">
+        <link rel="stylesheet" href="/stylesheets/style.css">
 
         <!-- icons -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
@@ -67,7 +67,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                Amit
+                                <%= codewars.username %>
                             </td>
                             <td>
                                 amitg01@gmail.com
