Add user authentication

--- a/Hackathon/views/dashboard.ejs
+++ b/Hackathon/views/dashboard.ejs
@@ -21,7 +21,7 @@
 
             <!-- logo starts -->
             <div class="logo">
-                <a href="#">
+                <a href="/">
                     <img id="logo-img" src="./assets/images/logo.png" alt="code-wars logo">
                 </a>
             </div>
