--- a/Hackathon/views/login.ejs
+++ b/Hackathon/views/login.ejs
@@ -9,8 +9,7 @@
     <!-- Parent Container -->
     <div class="container">
       <section class="main-logo-section">
-        <img class="main-logo-image" src="/images/main-logo.png">
-        <h2 class="header-two">codewars</h2>
+        <img class="main-logo-image" src="http://localhost:3000/images/logo.png" alt="codewars">
       </section>
       <section>
         <form action="/" method="POST">
