Data Rendering Error

--- a/Hackathon/views/dashboard.ejs
+++ b/Hackathon/views/dashboard.ejs
@@ -67,7 +67,7 @@
                     <tbody>
                         <tr>
                             <td>
-                                <%= codewars.username %>
+                                Amit
                             </td>
                             <td>
                                 amitg01@gmail.com
@@ -104,6 +104,7 @@
             <!-- wrapper ends -->
         </main>
         <!-- main ends -->
+        <script src="/js/main.js"></script>
 
     </body>
 
