--- a/Hackathon/views/register.ejs
+++ b/Hackathon/views/register.ejs
@@ -1,9 +1,22 @@
-<h3>Enter your e-mail and password to login.</h3>
-<form method="POST" action="/users/register">
-    <input type="email" placeholder="email" name="email">
-    <input type="password" placeholder="password..." name="password">
-    <input type="text" placeholder="username" name="username">
-    <button type="submit">Submit</button>
-</form>
-<h5>If you already have an account, sign in below!</h5>
-<a href="/users"><button>Sign up!</button></a>
+<head>
+    <title>New User</title>
+    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+</head>
+
+<body>
+<div class="register-wrapper">
+	 <section class="main-logo-section">
+      <img class="main-logo-image" src="http://localhost:3000/images/logo.png" alt="codewars">
+   </section>
+	<h3 style="color: #fff">Enter your e-mail and password to register.</h3>
+	<form method="POST" action="/users/register">
+	    <input class="register-form" type="email" placeholder="email" name="email">
+	    <input class="register-form" type="password" placeholder="password..." name="password">
+	    <input class="register-form" type="text" placeholder="username" name="username">
+	    <button type="submit" class="login-btn register-btn">Register</button>
+	</form>
+	<h5 style="color: #fff">If you already have an account, sign in below!</h5>
+	<a href="/"><button class="login-btn register-btn">Sign In!</button></a>
+</div>
+</body>
