--- a/Hackathon/views/register.ejs
+++ b/Hackathon/views/register.ejs
@@ -12,7 +12,7 @@
 	<h3 style="color: #fff">Enter your e-mail and password to register.</h3>
 	<form method="POST" action="/users/register">
 	    <input class="register-form" type="email" placeholder="email" name="email">
-	    <input class="register-form" type="password" placeholder="password..." name="password">
+	    <input class="register-form" type="password" placeholder="password" name="password">
 	    <input class="register-form" type="text" placeholder="username" name="username">
 	    <button type="submit" class="login-btn register-btn">Register</button>
 	</form>
