Add Github Authentication

--- a/Hackathon/public/stylesheets/style.css
+++ b/Hackathon/public/stylesheets/style.css
@@ -215,7 +215,7 @@ input {
   width: 340px;
   height: 40px;
   border: none;
-  color: #FFFFFF;
+  color: black;
   padding: 10px;
   font-size: 0.9rem;
   outline: none;
