--- a/Hackathon/views/login.ejs
+++ b/Hackathon/views/login.ejs
@@ -15,11 +15,11 @@
         <div>
           <div class="">
             <section>
-              <form action="/" method="POST">
+              <!-- <form action="/auth/github/" method="POST"> -->
                 <a href="/auth/github/">
                   <button class="login-btn" ><i class="fab fa-github"></i> GITHUB LOGIN</button>
                 </a>
-              </form>
+              <!-- </form> -->
             </section>
           </div>
           <!-- <p>-or-</p> -->
